--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="password_was_copied">\n Password was copied \n</string>
     <string name="help">Help</string>
     <string name="password_complexity">More strong password</string>
+    <string name="settings">Settings</string>
     <string name="help_text">Now you no longer need to remember a lot of passwords for different sites!
 Now it is possible to make the process of creating passwords very simple. First, you will need to choose the length of your new password. The longer, the better. Then you need to enter a word or several words in the upper field of the application that you associate with the service for which you need to choose a password, for example, "Mailbox". And in the lower field, you need to enter a keyword that can be the same for all your passwords. For example, "password", Then the application will use a special algorithm to generate a complex password from large and small English letters, as well as from special characters. The idea is that</string>
 
