--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Генератор паролей</string>
-    <string name="location">Введите название сайта:</string>
+    <string name="location">Введите название ресурса:</string>
     <string name="key_word">Введите ключевое слово:</string>
     <string name="your_password">Ваш пароль:</string>
     <string name="generate">Сгенерировать!</string>
@@ -9,10 +9,21 @@
     <string name="help">Помощь</string>
     <string name="settings">Настройки</string>
     <string name="password_complexity">Более сложный пароль</string>
-    <string name="help_text">   Вам больше не нужно запоминать множество паролей для различных сайтов!\n
-            Теперь стало возможным сделать процесс создания паролей очень простым. Для начала вам потребуется выбрать длину вашего нового
-        пароля. Чем длиннее, тем лучше. Затем Вам ввести в верхнее поле приложения слово или несколько
-        слов, которые ассоциируются у вас с сервисом для которого нужно подобрать пароль, например "Почтовый ящик". А в нижнее поле нужно ввести
-    ключевое слово, которое может быть одним для всех ваших паролей. Например "пароль" Далее приложение при помощи специального алгоритма сгенерирует
-    сложный пароль из больших и маленьких английских букв, а также из спецсимволов. Идея заключается в том, что </string>
+    <string name="help_text_0">Вам больше не нужно запоминать множество паролей для различных сайтов!</string>
+    <string name="help_text_1">Теперь стало
+        возможным сделать процесс создания паролей очень простым. Для начала вы можете посетить раздел настроек. Тут вы можете задать
+        длину вашего нового пароля. А так же тут находится переключатель для использования более сложного пароля. Когда выбрана опция
+        использовать более сложный пароль, используется большее количество символов и знаков. Рекомендуется отключить эту функцию
+        только в том случае, когда сервис предьявляет особые требования к использованию символов в пароле и не позволяет установить сгенерированный пароль.
+     </string>
+    <string name="help_text_2">Затем в основном окне введите в верхнее поле приложения слово, несколько
+        слов или число, которые ассоциируются у вас с ресурсом для которого нужно подобрать пароль, например "Почтовый ящик". А в нижнее поле нужно ввести
+    ключевое слово, которое может быть одним для всех ваших паролей. Например "пароль". После нажмите кнопку "СГЕНЕРИРОВАТЬ" и приложение при помощи
+        специального алгоритма сгенерирует сложный пароль из больших и маленьких английских букв, а также из спецсимволов.
+        При этом его не нужно будет переписывать вручную - он будет скопирован в
+    буфер обмена и вам останется лишь вставить его в необходимое поле для регистрации или входа в аккаунт.</string>
+
+    <string name="help_text_3">Главная особенность в том, что каждый раз когда вы будете вводить комбинацию из названия ресурса (либо слова
+        которое ассоциируется с этим ресурсом) и ключевого слова, то будете получать один и тот же сложный пароль.
+        При этом приложение не запоминает и не хранит ваши пароли!</string>
 </resources>
