Все поля очищаются через 5 секунд. Работает переключатель на старый вариант генерации пароля (не рекомендуется).

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -9,6 +9,7 @@
     <string name="help">Помощь</string>
     <string name="settings">Настройки</string>
     <string name="password_complexity">Более сложный пароль</string>
+    <string name="password_generation_model">Новая модель генерации</string>
     <string name="help_text_0">Вам больше не нужно запоминать множество паролей для различных сайтов!</string>
     <string name="help_text_1">Теперь стало
         возможным сделать процесс создания паролей очень простым. Для начала вы можете посетить раздел настроек. Тут вы можете задать
