--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="password_was_copied"> Password was copied </string>
     <string name="help">Help</string>
     <string name="password_complexity">More strong password</string>
+    <string name="password_generation_model">New generation model</string>
     <string name="settings">Settings</string>
 
     <string name="help_text_0">You no longer need to remember a lot of passwords for different sites!</string>
