--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="help">Help</string>
     <string name="password_complexity">More strong password</string>
     <string name="password_generation_model">New generation model</string>
+    <string name="hide_user_data">Hide user data after generation</string>
     <string name="settings">Settings</string>
 
     <string name="help_text_0">You no longer need to remember a lot of passwords for different sites!</string>
